Add Aggregated annotations. Add AggregationException. Allow for arbitrary visitation rather than always collecting aggregated values. Add collections rule to MatchRules. Begin AggregatesTests.